update
emoji ve metinlerin boyutları ile konumları ayarlandı